added mtg section to page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a href="index.html" class="navbarLinks">Calculator</a>
             </li>
             <li class="navbarItem">
-                <a href="/" class="navbarLinks">Coming soon</a>
+                <a href="mtg.html" class="navbarLinks">MTG</a>
             </li>
             <li class="navbarItem">
                 <a href="/" class="navbarLinks">Coming Soon</a>
