added mtg section to nav bar

--- a/mtg.html
+++ b/mtg.html
@@ -37,7 +37,7 @@
     <!--Code to display the main MTG section of the page -->
     <h2 class="mtgTitle">Welcome to Magic: The Gathering!</h2>
     <p class="mtgText">This is a section dedicated to all things Magic: The Gathering.</p>
-    <img src="/images/magic_logo.png" alt="Magic Logo" class="mtgLogo"/>
+    <img src="/images/mtgLogo.jpg" alt="Magic Logo" class="mtgLogo"/>
 </div>
 </body>
 </html>
