Added commander deck to mtg.html

--- a/mtg.html
+++ b/mtg.html
@@ -33,11 +33,32 @@
         </ul>
     </div>
 </nav>
-<div class="mtgContainer">
+<div class="mtgContainer"><br>
     <!--Code to display the main MTG section of the page -->
     <h2 class="mtgTitle">Welcome to Magic: The Gathering!</h2>
     <p class="mtgText">This is a section dedicated to all things Magic: The Gathering.</p>
     <img src="/images/mtgLogo.jpg" alt="Magic Logo" class="mtgLogo"/>
+    <br>
+    <h2>My current MTG Arena Brawl deck</h2>
+    <h3>Atraxa, Praetor's Voice</h3>
+    <ul class="commanderList">
+        <li><strong>Commander: <br><br> Atraxa, Praetor's Voice</strong></li><br><br>
+        <li onclick="showPic()"><strong>Planeswakers:</strong></li>
+        <br>
+        <li onclick="showPic()">Narset, Parter of Veils</li>
+        <li onclick="showPic()">Teferi, Master of Time</li>
+        <li onclick="showPic()">Teferi, Who Slows Time</li>
+        <li onclick="showPic()">Tashs, Unholy Archmage</li>
+        <li onclick="showPic()">Tamiyo, Field Researcher</li>
+        <li onclick="showPic()">Teferi, Hero of Dominaria</li>
+        <li onclick="showPic()">Kaya, The Inexorable</li>
+        <li onclick="showPic()">Tamiyo, Compleated Sage</li>
+        <li onclick="showPic()">Vraska, Betrayal's Sting</li>
+        <li onclick="showPic()">Nissa, Ascended Animist</li>
+        <li onclick="showPic()">Kaya, Intangible Slayer</li>
+    </ul>
+
+
 </div>
 </body>
 </html>
