more changes to mtg.html, beginner script added

--- a/mtg.html
+++ b/mtg.html
@@ -57,6 +57,9 @@
         <li onclick="showPic()">Nissa, Ascended Animist</li>
         <li onclick="showPic()">Kaya, Intangible Slayer</li>
     </ul>
+    <div class="imageBox">
+        <img src="" alt="">
+    </div>
 
 
 </div>
