Added new items to mtg.html

--- a/mtg.html
+++ b/mtg.html
@@ -42,26 +42,31 @@
     <h2>My current MTG Arena Brawl deck</h2>
     <h3>Atraxa, Praetor's Voice</h3>
     <ul class="commanderList">
-        <li><strong>Commander: <br><br> Atraxa, Praetor's Voice</strong></li><br><br>
-        <li onclick="showPic()"><strong>Planeswakers:</strong></li>
+        <li><strong>Commander: 
+            <br>
+            <br> <a href="#" class="cardLink" data-image="images/Atraxa.jpg">Atraxa, Praetor's Voice</a></strong></li>
         <br>
-        <li onclick="showPic()">Narset, Parter of Veils</li>
-        <li onclick="showPic()">Teferi, Master of Time</li>
-        <li onclick="showPic()">Teferi, Who Slows Time</li>
-        <li onclick="showPic()">Tashs, Unholy Archmage</li>
-        <li onclick="showPic()">Tamiyo, Field Researcher</li>
-        <li onclick="showPic()">Teferi, Hero of Dominaria</li>
-        <li onclick="showPic()">Kaya, The Inexorable</li>
-        <li onclick="showPic()">Tamiyo, Compleated Sage</li>
-        <li onclick="showPic()">Vraska, Betrayal's Sting</li>
-        <li onclick="showPic()">Nissa, Ascended Animist</li>
-        <li onclick="showPic()">Kaya, Intangible Slayer</li>
+        <br>
+        <li><strong>Planeswakers:</strong></li>
+        <br>
+        <li><a class="cardLink" data-image="images/Atraxa.jpg">Narset, Parter of Veils</a></li>
+        <li>Teferi, Master of Time</li>
+        <li>Teferi, Who Slows Time</li>
+        <li>Tasha, Unholy Archmage</li>
+        <li>Tamiyo, Field Researcher</li>
+        <li>Teferi, Hero of Dominaria</li>
+        <li>Kaya, The Inexorable</li>
+        <li>Tamiyo, Compleated Sage</li>
+        <li>Vraska, Betrayal's Sting</li>
+        <li>Nissa, Ascended Animist</li>
+        <li>Kaya, Intangible Slayer</li>
     </ul>
     <div class="imageBox">
-        <img src="" alt="">
-    </div>
+        <img id="cardImage" src="" alt="Card Image">
+    </div><!--end image box-->
 
 
-</div>
+</div> <!--End container-->
+<script src="mtgScript.js"></script>
 </body>
 </html>
