Updated images in mtg.html

--- a/mtg.html
+++ b/mtg.html
@@ -49,17 +49,17 @@
         <br>
         <li><strong>Planeswakers:</strong></li>
         <br>
-        <li><a class="cardLink" data-image="images/Atraxa.jpg">Narset, Parter of Veils</a></li>
-        <li>Teferi, Master of Time</li>
-        <li>Teferi, Who Slows Time</li>
-        <li>Tasha, Unholy Archmage</li>
-        <li>Tamiyo, Field Researcher</li>
-        <li>Teferi, Hero of Dominaria</li>
-        <li>Kaya, The Inexorable</li>
-        <li>Tamiyo, Compleated Sage</li>
-        <li>Vraska, Betrayal's Sting</li>
-        <li>Nissa, Ascended Animist</li>
-        <li>Kaya, Intangible Slayer</li>
+        <li><a href="#" class="cardLink" data-image="images/Narset, Parter of Veils.jpg">Narset, Parter of Veils</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Teferi, Master of Time.jpg">Teferi, Master of Time</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Teferi, Who Slows the Sunset.jpg">Teferi, Who Slows the Sunset</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Tasha, Unholy Archmage.jpg">Tasha, Unholy Archmage</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Tamiyo, Field Researcher.jpg">Tamiyo, Field Researcher</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Teferi, Hero of Dominaria.jpg">Teferi, Hero of Dominaria</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Kaya, The Inexorable.jpg">Kaya, The Inexorable</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Tamiyo, Compleated Sage.jpg">Tamiyo, Compleated Sage</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Vraska, Betrayal's Sting.jpg">Vraska, Betrayal's Sting</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Nissa, Ascended Animist.jpg">Nissa, Ascended Animist</a></li>
+        <li><a href="#" class="cardLink" data-image="images/Kaya, Intangible Slayer.jpg">Kaya, Intangible Slayer</a></li>
     </ul>
     <div class="imageBox">
         <img id="cardImage" src="" alt="Card Image">
