--- a/mtg.html
+++ b/mtg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <title>Magic Stuff</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <a href="mtg.html" class="navbarLinks">MTG</a>
             </li>
             <li class="navbarItem">
-                <a href="/" class="navbarLinks">Coming Soon</a>
+                <a href="PostItNotes.html" class="navbarLinks">Post-It Note Generator</a>
             </li>
             <li class="navbarItem">
                 <a href="/" class="navbarLinks">Coming Soon</a>
@@ -37,7 +37,7 @@
     <!--Code to display the main MTG section of the page -->
     <h2 class="mtgTitle">Welcome to Magic: The Gathering!</h2>
     <p class="mtgText">This is a section dedicated to all things Magic: The Gathering.</p>
-    <img src="/images/mtgLogo.jpg" alt="Magic Logo" class="mtgLogo"/>
+    <img src="images/mtgLogo.jpg" alt="Magic Logo" class="mtgLogo"/>
     <br>
     <h2>My current MTG Arena Brawl deck</h2>
     <h3>Atraxa, Praetor's Voice</h3>
