--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <title>Projects</title>
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <a href="mtg.html" class="navbarLinks">MTG</a>
             </li>
             <li class="navbarItem">
-                <a href="/" class="navbarLinks">Coming Soon</a>
+                <a href="PostItNotes.html" class="navbarLinks">Post-It Note Creator</a>
             </li>
             <li class="navbarItem">
                 <a href="/" class="navbarLinks">Coming Soon</a>
